--- a/index.html
+++ b/index.html
@@ -13,9 +13,29 @@
     <div class="conteudo">
         <div class="botoes">
             <button class= "botao ativo">Entrar na faculdade</button>
-            <button class="botao">Ter uma carreira bem firme</button>
-            <button class="botao">Passar mais tempo com amigas</button>
-            <button class="botao">Ter uma casa</button>
+            <button class="botao">Ter uma carreira solida</button>
+            <button class="botao">Ter uma vida saudavel</button>
+            <button class="botao">Ter uma casa propria</button>
         </div>
+        <div class="abas-textos">
+            <div class="abas-conteudo ativo">
+                <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+            </div>
+            <div class="abas-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+            </div>
+            <div class="abas-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+            </div>
+            <div class="abas-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+            </div>
+
+        </div>
+    </section>
 </body>
 </html>
